# disko2

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml  statix.toml  taplo.toml  treefmt.toml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/private/: eyre.rs  tracing.rs
src/: cli.rs  main.rs
