[workspace]
  members  = [ "bin/disko", "bin/disko-install", "lib" ]
  resolver = "3"

  [workspace.package]
    description = "Declarative disk partitioning tool"
    edition     = "2024"
    license     = "MIT"
    version     = "2.0.0"

  [workspace.dependencies]
    color-eyre = { default-features = false, version = "0.6.5" }
    owo-colors = "4.2.3"


[profile.release]
  incremental = true
  lto         = "fat"
