[package]
  description.workspace = true
  edition.workspace     = true
  license.workspace     = true
  name                  = "disko-lib"
  version.workspace     = true

[dependencies]
  color-eyre.workspace = true
  console              = "0.16.1"
  human-panic          = "2.0.4"
  owo-colors.workspace = true
  tracing.workspace    = true
  tracing-subscriber   = "0.3.22"
